Tovább fejlesztve és get kérés belerakva

--- a/src/nav.css
+++ b/src/nav.css
@@ -9,7 +9,7 @@
     border-radius: 5px;
     text-decoration: none !important;
 }
-
+/*A navigáció kinézet*/
 
 .nav-link.custom-link:hover {
     background-color: white !important;
