--- a/src/App.css
+++ b/src/App.css
@@ -360,3 +360,154 @@ button.btn:hover {
       width: 100%;
   }
 }
+
+/*-------------------------*/
+/*Modal*/
+/* Modal overlay (háttér) */
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+/* Modális tartalom (ablak) */
+.modal-content {
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  width: 80%;
+  max-width: 600px;
+  position: relative;
+}
+
+/* Záró gomb */
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 20px;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+/* A modál képei */
+.modal-images img {
+  max-width: 100%;
+  height: auto;
+  margin-top: 20px;
+  display: block;
+}
+
+/* Inaktív lefjo stílus */
+.feljo.inactive {
+  opacity: 1;  /* Csökkentett átláthatóság, jelezve, hogy inaktív */
+  pointer-events: none;  /* Megakadályozza, hogy kattinthass rá */
+}
+
+
+
+/*-----------*/
+/* New house */
+/* Form container */
+.new-listing-form {
+  width: 100%;
+  max-width: 600px;
+  margin: 2.5% auto;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 0 20px #000;
+  font-family: Arial, sans-serif;
+  border: 2px solid #000;
+  
+}
+
+.new-listing-form h2 {
+  text-align: center;
+  font-size: 24px;
+  margin-bottom: 20px;
+  color: #333;
+}
+
+.input-box {
+  position: relative;
+  margin-bottom: 20px;
+}
+
+.input-box input,
+.input-box textarea {
+  width: 100%;
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #f9f9f9;
+  box-sizing: border-box;
+}
+
+.input-box textarea {
+  height: 100px;
+  resize: vertical;
+}
+
+.input-box label {
+  position: absolute;
+  top: -10px;
+  left: 10px;
+  font-size: 14px;
+  color: #666;
+  background-color: #fff;
+  padding: 0 5px;
+  transition: 0.2s;
+}
+
+.input-box input:focus,
+.input-box textarea:focus {
+  border-color: #007bff;
+}
+
+.input-box input:focus + label,
+.input-box textarea:focus + label {
+  top: -20px;
+  left: 5px;
+  font-size: 12px;
+  color: #007bff;
+}
+
+.error-text {
+  color: red;
+  font-size: 12px;
+  margin-top: 5px;
+}
+
+
+
+.message {
+  margin-top: 20px;
+  padding: 10px;
+  background-color: #e0ffe0;
+  color: #4caf50;
+  text-align: center;
+  border-radius: 5px;
+}
+
+@media (max-width: 768px) {
+  .new-listing-form {
+    padding: 15px;
+  }
+
+  .input-box input,
+  .input-box textarea {
+    font-size: 14px;
+  }
+
+  
+}
