--- a/src/App.css
+++ b/src/App.css
@@ -166,18 +166,19 @@ ul.topnav li.right {
 
 
 /* cardok */
-
 .card {
   width: 400px;
   aspect-ratio: 1 / 0.7;
   position: relative;
   cursor: pointer;
-  overflow: hidden; /* Fontos, hogy ne nyúljon túl a határokon */
   background: #fff;
   border: 2px solid #000;
   border-radius: 10px;
   box-shadow: 0 0 20px #000;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   transition: all 0.3s ease-in-out;
   padding: 20px;
 
@@ -195,12 +196,13 @@ ul.topnav li.right {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  object-position: 50% 90%;
   border-radius: inherit;
   transition: 0.5s ease-in-out;
 }
 
 .feljo{
+  text-align: center;
+
   color: #fff;
 }
 
@@ -245,6 +247,7 @@ ul.topnav li.right {
   opacity: 1;
   visibility: visible;
 }
+
 
 
 
@@ -374,13 +377,18 @@ button.btn:hover {
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1000;
 }
 
 /* Modális tartalom (ablak) */
 .modal-content {
+  width: 100%;
+  height: 100%;
+  text-align: center;
   background-color: white;
   padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   border-radius: 8px;
   width: 80%;
   max-width: 600px;
@@ -400,7 +408,7 @@ button.btn:hover {
 
 /* A modál képei */
 .modal-images img {
-  max-width: 100%;
+  max-width: 80%;
   height: auto;
   margin-top: 20px;
   display: block;
@@ -411,6 +419,8 @@ button.btn:hover {
   opacity: 1;  /* Csökkentett átláthatóság, jelezve, hogy inaktív */
   pointer-events: none;  /* Megakadályozza, hogy kattinthass rá */
 }
+
+
 
 
 
