--- a/src/App.css
+++ b/src/App.css
@@ -181,6 +181,7 @@ ul.topnav li.right {
   align-items: center;
   transition: all 0.3s ease-in-out;
   padding: 20px;
+  margin: 20px;
 
 }
 
@@ -368,50 +369,101 @@ button.btn:hover {
 /*Modal*/
 /* Modal overlay (háttér) */
 .modal-overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
+  position: absolute;
+  top: 27.5%;
+  left: 25%;
+  width: 50%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 1000;
+  color: #333;
+  background-color: white;
+  
 }
 
 /* Modális tartalom (ablak) */
 .modal-content {
-  width: 100%;
-  height: 100%;
+  background-color: #ffffff;
   text-align: center;
-  background-color: white;
-  padding: 20px;
+  border-radius: 15px;
+  padding: 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  border-radius: 8px;
-  width: 80%;
-  max-width: 600px;
+  width: 100%;
+  height: 100%;
+  /* max-width: 500px; */
   position: relative;
+  z-index: 1001;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+  border: 1px solid #e0e0e0;
+  animation: fadeIn 0.3s ease-in-out;
+  overflow: auto;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 /* Záró gomb */
 .close-btn {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 40px;
+  right: 40px;
   font-size: 20px;
   background: transparent;
   border: none;
   cursor: pointer;
+  color: #333;
+  transition: color 0.3s ease;
+}
+
+.close-btn:hover {
+  color: #000; /* Egér rávitelével sötétebb szín */
+}
+
+.modal-content h2 {
+  margin-top: 0;
+  font-size: 24px;
+  color: #333;
+  text-align: center;
+}
+
+.modal-content h3 {
+  font-size: 18px;
+  color: #555;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.modal-description {
+  font-size: 16px;
+  color: #666;
+  line-height: 1.5;
+  margin-bottom: 20px;
 }
 
 /* A modál képei */
+.modal-images {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
 .modal-images img {
-  max-width: 80%;
+  max-width: 100%;
   height: auto;
-  margin-top: 20px;
-  display: block;
+  border-radius: 10px;
 }
 
 /* Inaktív lefjo stílus */
@@ -519,5 +571,4 @@ button.btn:hover {
     font-size: 14px;
   }
 
-  
 }
