--- a/src/App.css
+++ b/src/App.css
@@ -167,7 +167,7 @@ ul.topnav li.right {
 
 /* cardok */
 .card {
-  width: 400px;
+  width: 560px;
   aspect-ratio: 1 / 0.7;
   position: relative;
   cursor: pointer;
@@ -369,17 +369,17 @@ button.btn:hover {
 /*Modal*/
 /* Modal overlay (háttér) */
 .modal-overlay {
-  position: absolute;
-  top: 27.5%;
-  left: 25%;
-  width: 50%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   z-index: 1000;
   color: #333;
-  background-color: white;
+  background-color: rgba(0, 0, 0, 0.5)
   
 }
 
@@ -625,9 +625,9 @@ button.btn:hover {
   box-sizing: border-box;
   position: relative;
 }
-
+ 
 #naptar-container {
-  width: 100%;
+  width: 25%;
   padding: 10px;
   background-color: #fff;
   border: 1px solid #ccc;
@@ -635,6 +635,7 @@ button.btn:hover {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   flex-shrink: 0;
   box-sizing: border-box;
+  float: right;
 }
 
 #honap-ev-cim {
@@ -665,7 +666,7 @@ button.btn:hover {
 .nap {
   padding: 10px;
   cursor: default;
-  font-size: 1.5vw;
+  font-size: 1vw;
 }
 
 .nap.ures {
@@ -717,7 +718,7 @@ button.btn:hover {
   }
 
   .nap {
-    font-size: 4vw; /* A napok számának betűmérete is rugalmas */
+    width: 50%; /* A napok számának betűmérete is rugalmas */
   }
 
  
@@ -736,6 +737,7 @@ button.btn:hover {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  margin-top: auto;
 }
 
 .footer-column {
@@ -761,3 +763,25 @@ button.btn:hover {
   justify-content: space-around;
   width: 100%;
 }
+
+
+
+
+
+
+/* Konténer, amely tartalmazza a három oszlopot */
+#container {
+  display: flex;
+  justify-content: space-between;
+  min-height: 100vh;
+  flex-direction: column
+  
+}
+
+/* Az oszlopok (bal, középső és jobb oszlop) */
+#column {
+  flex: 1;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
